# EspNowBench

./: CMakeLists.txt  README.md
C/src/: main.c
Rust/: Cargo.toml
Rust/.cargo/: config.toml
Rust/src/: main.rs  rx.rs  tx.rs
src/: espnow_bench.h  main.c
