[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { version = "0.2.0", features = ["arch-riscv32", "nightly", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.1.1", features = ["nightly"] }
embassy-futures = { version = "0.1.0" }
embassy-sync = "0.2.0"

esp32c3 = { version = "0.15.0", features = ["critical-section"] }
esp32c3-hal = { version = "0.10.0", features = ["async", "debug", "embassy", "embassy-time-timg0"] }

esp-backtrace = { version = "0.7.0", features = ["esp32c3", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["log"] }

esp-wifi = { git = "https://github.com/M4tsuri/esp-wifi", branch = "fix_esp_now_send", package = "esp-wifi", features = ["wifi", "esp32c3", "async", "esp-now", "phy-enable-usb"] }
# esp-wifi = { path = "../esp-wifi/esp-wifi", features = ["wifi", "esp32c3", "async", "esp-now", "phy-enable-usb"] }
log = "0.4"

nalgebra = { version = "0.32.3", default-features = false }

embedded-hal = "1.0.0-alpha.10"
static_cell = "1.2.0"

atomic = { version = "0.6.0", default-features = false }
bytemuck = { version = "1.13", features = ["derive"] }

[features]
unicast = []

[[bin]]
name = "tx"
path = "src/tx.rs"

[[bin]]
name = "rx"
path = "src/rx.rs"
